# interval_map

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ThinkCellTest.sln  interval_map.sln  vcpkg.json
.github/workflows/: ci.yml
ThinkCellTest/: ThinkCellTest.vcxproj  interval_map.h  test.cpp
docs/: assign.md  examples.md  index.md  performance.md  usage.md
examples/: price_tiers.cpp  resource_booking.cpp  time_based_config.cpp
include/interval_map/: interval_map.hpp
interval_map/: interval_map.h  interval_map.vcxproj  test.cpp
tests/: test_interval_map.cpp  test_overhead.cpp
